--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ position: absolute;
 top:600px;
 height: 368px;
 width: 1848px;
+z-index: -3;
 }
 
 .canasta{
@@ -213,4 +214,167 @@ font-weight: bolder;
 color: rgb(124, 17, 17);
 -webkit-text-stroke: 2px white;
 font-weight: bolder;
+}
+
+.caonjunto_cabeza {
+position: absolute;
+transform: scale(0.18);
+top: -445px;
+left: -115px;
+top: -428px;
+}
+
+.cabeza {
+width: 350px;
+height: 425px;
+background-color: rgb(176, 128, 55);
+border-bottom-left-radius: 45%;
+border-bottom-right-radius: 45%;
+border-top-left-radius: 15%;
+border-top-right-radius: 15%;
+z-index: 3;
+}
+
+
+.boca {
+position: relative;
+background-color: rgb(200, 105, 95);
+width: 180px;
+height: 20px;
+left: 83px;
+top: 290px;
+border: thin solid rgb(161, 98, 81);
+border-radius:45%;
+border-width: 5px;
+}
+
+.linea_boca {
+position: relative;
+width: 180px;
+height: 3px;
+background-color: rgb(161, 98, 81);
+top: 10px;
+border-radius: 100% 50%;
+}
+
+.zona_ojos {
+  position: absolute;
+  top: 75px;
+  width: 150px;
+  height: 100px;
+}
+
+.ojo_iz {
+position: relative;
+width: 95px;
+height: 42px;
+background-color: white;
+left: 55px;
+top: 75px;
+border: thin solid black;
+border-radius: 75% 75%;
+}
+
+.pupila {
+  position: relative;
+  background-color: rgb(84, 45, 5);
+  height: 43px;
+  width: 45px;
+  top: -1px;
+  left: 23px;
+  border: thin solid black;
+  border-radius: 50%
+}
+
+.negro {
+  position: relative;
+  background-color: black;
+  height: 10px;
+  width: 10px;
+  top: 20px;
+  left: 18px;
+  border-radius: 50%
+}
+
+.ojo_der {
+position: relative;
+width: 95px;
+height: 42px;
+background-color: white;
+left: 200px;
+top: 27px;
+border: thin solid black;
+border-radius: 75% 75%;
+}
+
+
+.cejas {
+position: relative;
+left: 56px;
+top: 70px;
+}
+
+.ceja_de {
+position: relative;
+width: 100px;
+height: 10px;
+top: -123px;
+left: 140px;
+background-color: rgb(22, 23, 22);
+border-radius: 100% 50%;
+}
+
+.ceja_iz {
+position: relative;
+width: 100px;
+height: 10px;
+top: -110px;
+left: 0px;
+background-color: rgb(22, 23, 22);
+border-radius: 100% 50%;
+}
+
+.nariz {
+position: relative;
+background-color: rgb(149, 100, 17);
+height: 30px;
+width: 50px;
+top: 195px;
+left: 148px;
+border-radius: 100%;
+border: thin solid rgb(88, 58, 16);
+border-radius:45%;
+}
+
+.cinta {
+  position: relative;
+  width: 350px;
+  height: 85px;
+  top: -63px;
+  border-top-right-radius: 25%;
+  border-top-left-radius: 25%;
+  border-bottom-left-radius: 12%;
+  border-bottom-right-radius: 12%;
+  background-color: rgb(124, 17, 17);
+}
+
+.pelo {
+  position: relative;
+  background-color: rgb(29, 29, 29);
+  height: 325px;
+  width: 380px;
+  top: -350px;
+  left: -15px;
+  border-radius: 100%;
+  z-index: -1;
+}
+
+
+.cuello {
+position: relative;
+background-color: rgb(176, 128, 55);
+width: 23px;
+height: 25px;
+left: 51px;
+top: -350px;
 }
